--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,10 +7,10 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <link
-      rel="stylesheet"
       type="text/css"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="/static/layout.css" />
@@ -30,6 +30,11 @@
   <body class="bodybg">
     <div id="content" class="mt-3 mx-auto rounded">
       {% block content %}{% endblock %}
+    </div>
+    <div class="icon-attrib mt-3 mx-auto rounded text-center">
+      <a href="https://www.flaticon.com/free-icons/map" title="map icons">
+        Map icons created by Freepik - Flaticon
+      </a>
     </div>
   </body>
 </html>
