Added build info as HTML comment in output

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,4 +1,12 @@
 <!doctype html>
+<!--
+Source:        https://github.com/oddlid/rlunch
+Build date:    {{ build.build_date }}
+Commit date:   {{ build.commit_date }}
+Commit hash:   {{ build.commit_hash }}
+Commit author: {{ build.commit_author }}
+Version:       {{ build.pkg_version }}
+-->
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
