--- a/templates/dishes_for_site.html
+++ b/templates/dishes_for_site.html
@@ -2,7 +2,7 @@
 {% block title %}Dishes for site {{ site.name }}{% endblock %} 
 {% block header %}
 {% filter indent(8, true) | safe %}
-<h1 class="pghdr h5 text-center"><a href="/">Menu</a> @ {{ site.name }}</h1>
+<h1 class="pghdr fw-medium text-center"><a href="/">Menu</a> @ {{ site.name }}</h1>
 <div class="toggledetails text-center mt-3" onclick="toggledetail();">[ Show / hide all ]</div>
 
 {% endfilter %}
@@ -12,53 +12,43 @@
 
 {% for restaurant in site.restaurants %}
 
-<div class="restaurant m-2">
-  <details open class="pb-3">
+<div class="restaurant p-2">
+  <details open class="">
     <summary>
-      <h2 class="h6">
-        <a href="{{ restaurant.url }}">{{ restaurant.name }}</a>
-        {% if restaurant.address and restaurant.map_url %}
-        &nbsp;&nbsp;
-        <a href="{{ restaurant.map_url }}" target="_blank">
-          <img src="/static/map_64.png" width="24" height="24" alt="{{ restaurant.address }}" />
-        </a>
-        {% endif %}
-      </h2>
+      {% if restaurant.address and restaurant.map_url %}
+      <a href="{{ restaurant.map_url }}" target="_blank">
+        <img src="/static/map_64.webp" width="28" height="28" alt="{{ restaurant.address }}" />
+      </a>
+      &nbsp;&nbsp;
+      {% endif %}
+      <a href="{{ restaurant.url }}">{{ restaurant.name }}</a>
     </summary>
-    <div class="parsed ms-2">Updated @ {{ restaurant.parsed_at | datetimeformat(format="short", tz="Europe/Stockholm") }}</div>
-    <div class="dishes ms-1 p-2 shadow rounded">
-      <table class="dish">
-        {% for dish in restaurant.dishes %}
-        <tr colspan="2">
-          <td class="tags">
-            {% if dish.tags %}
-            [{{ dish.tags | join(", ")}}]
-            {% else %}
-            &nbsp;
-            {% endif %}
-            {% if dish.comment %}
-            <span class="dish-comment">({{ dish.comment }})</span>
-            {% endif %}
-          </td>
-        </tr>
-        <tr class="dish">
-          <td>
-            <div class="d-flex align-items-end m-2">
-              <div class="flex-fill">
-                <span class="name h6">{{ dish.name }}</span>
-                <span class="desc">{{ dish.description }}</span>
-              </div>
-              <div class="flex-none text-nowrap">{{ dish.price | stripz }} {{ currency_suffix }}</div>
-            </div>
-          </td>
-        </tr>
-        {% endfor %}
-      </table>
+    <div class="parsed">Updated @ {{ restaurant.parsed_at | datetimeformat(format="short", tz="Europe/Stockholm") }}</div>
+    <div class="dishes shadow rounded p-2">
+    {% for dish in restaurant.dishes %}
+      <div class="tags">
+        {% if dish.tags %}
+        [{{ dish.tags | join(", ")}}]
+        {% else %}
+        &nbsp;
+        {% endif %}
+        {% if dish.comment %}
+        <span class="dish-comment">({{ dish.comment }})</span>
+        {% endif %}
+      </div>
+      <div class="dish">
+        <span class="name fw-medium">{{ dish.name }}</span>
+        <span class="desc">{{ dish.description }}</span>
+        <span class="price fw-medium text-decoration-underline text-nowrap">{{ dish.price | stripz }} {{ currency_suffix }}</span>
+      </div>
+    {% endfor %}
     </div>
   </details>
 </div>
 
 {% endfor %}
+
+<br />
 
 {% endfilter %}
 {% endblock %}
