--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,37 +7,35 @@ Commit hash:   {{ build.commit_hash }}
 Commit author: {{ build.commit_author }}
 Version:       {{ build.pkg_version }}
 -->
-<html>
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    {% block metaextra %}
+    <meta name="description" content="Todays menu" />
+    {% endblock %}
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <link
-      type="text/css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+      type="text/css"
+      href="/static/bootstrap_v5.3.3.css"
     />
     <link rel="stylesheet" type="text/css" href="/static/layout.css" />
-    <script type="text/javascript" src="/static/funcs.js"></script>
-    {% block gtag %}
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id={{ gtag }}"
-    ></script>
-    <script>
-      gtag("js", new Date());
-      gtag("config", "{{ gtag }}");
-    </script>
-    {% endblock %}
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="/static/sky.webp"
+      type="image/webp"
+    />
+    <script async type="text/javascript" src="/static/funcs.js"></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body class="bodybg">
     <div class="container">
-      <div id="header" class="py-5 rounded">
+      <div id="header" class="py-5 my-2 rounded">
         {% block header %}
         <!-- Comment just to keep vim from formatting this part into one line -->
         {% endblock %}
@@ -54,4 +52,14 @@ Version:       {{ build.pkg_version }}
       </div>
     </div>
   </body>
+  {% block gtag %}
+  <script
+    type="text/javascript"
+    src="https://www.googletagmanager.com/gtag/js?id={{ gtag }}"
+  ></script>
+  <script type="text/javascript">
+    gtag("js", new Date());
+    gtag("config", "{{ gtag }}");
+  </script>
+  {% endblock %}
 </html>
