--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@ Commit date:   {{ build.commit_date }}
 Commit hash:   {{ build.commit_hash }}
 Commit author: {{ build.commit_author }}
 Version:       {{ build.pkg_version }}
+Raw data:      https://lunchapi.oddware.net
 -->
 <html lang="en">
   <head>
